@@ -4361,6 +4361,10 @@ static void NewTcpSession(
         tmp->ecn = 0;
         assert(!tmp->tcp_init);
         tmp->tcp_init = true;
+
+        for ( unsigned i = 0; i < lwssn->flowdata->boFlowbits.uiBitBufferSize; i++ )
+            assert(!lwssn->flowdata->flowb[i]);
+
         tcpStats.trackers_created++;
     }
 }
